--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,7 @@
 main:
   - title: "Posts"
-    url: /posts/
+    url: /posts
   - title: "Categories"
-    url: /categories/
+    url: /categories
   - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+    url: /tags
