[Config] 링크드인 아이콘 수정

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cbinarycastle"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/sungbin-cho-10396725b"
 
 footer:
@@ -68,7 +68,7 @@ footer:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cbinarycastle"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/sungbin-cho-10396725b"
 
 defaults:
