--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      show_date: true
       read_time: true
       comments: true
       share: true
